--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,13 @@
 {
   "name": "form5-alignment",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "homepage": "http://form5.github.io/form5-alignment",
   "description": "A collection of alignment helper functions dependent on jQuery",
   "repository": {
     "type": "git",
     "url": "git://github.com/Form5/form5-alignment.git"
   },
+  "main": "dist/form5-alignment.min.js"
   "authors": [
     "Benedikt D Valdez <benedikt@form5.is>",
     "Olafur Nielsen <olafur@form5.is>",
